<resources>
    <string name="app_name">SongHut</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_select_repository">选择将加入的库：</string>
    <string name="text_select_instrument">选择演奏乐器：</string>


    <string name="accompany">伴奏</string>
    <string name="audition">试听</string>
    <string name="convert2_melody">转为旋律</string>

    <string name="import_lyrics">导入歌词</string>

    <string name="square">广场</string>
    <string name="creation">创作</string>
    <string name="activity">动态</string>
    <string name="account">账号</string>

    <string name="init_time">00:00</string>
    <string name="total_time">/00:00</string>
    <string name="name_resource">素材命名：</string>
    <string name="save_to_repository">保存位置：</string>
    <string name="save">保存</string>

    <string name="select_convert_instrument">选择转换乐器：</string>
    <string name="start_convert">开始转换</string>
    <string name="bio_resource">素材描述：</string>


    <string name="moment">动态</string>
    <string name="message">消息</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
