<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/linearLayout"
android:layout_width="match_parent"
android:layout_height="90dp"
android:background="@color/bottom_bar_background"
android:paddingTop="0dp"
android:paddingBottom="0dp">

<TextView
    android:id="@+id/text_account"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="32dp"
    android:drawableTop="@drawable/account"
    android:gravity="center_horizontal"
    android:text="@string/account"
    android:textSize="13sp"
    app:layout_constraintBottom_toTopOf="@+id/guideline"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/text_message"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/text_moment"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="32dp"
    android:drawableTop="@drawable/moment"
    android:gravity="center_horizontal"
    android:text="@string/moment"
    android:textSize="13sp"
    app:layout_constraintBottom_toTopOf="@+id/guideline"
    app:layout_constraintEnd_toStartOf="@+id/btn_create"
    app:layout_constraintStart_toEndOf="@+id/text_square"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0" />

<ImageButton
    android:id="@+id/btn_create"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_marginBottom="0dp"
    android:gravity="center_horizontal"
    android:background="@drawable/create"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/text_message"
    app:layout_constraintStart_toEndOf="@+id/text_moment"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/text_message"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="32dp"
    android:drawableTop="@drawable/message"
    android:gravity="center_horizontal"
    android:text="@string/message"
    android:textSize="13sp"
    app:layout_constraintBottom_toTopOf="@+id/guideline"
    app:layout_constraintEnd_toStartOf="@+id/text_account"
    app:layout_constraintStart_toEndOf="@+id/btn_create"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/text_square"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="32dp"
    android:drawableTop="@drawable/square"
    android:gravity="center_horizontal"
    android:text="@string/square"
    android:textSize="13sp"
    app:layout_constraintBottom_toTopOf="@+id/guideline"
    app:layout_constraintEnd_toStartOf="@+id/text_moment"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintGuide_end="0dp" />

</android.support.constraint.ConstraintLayout>