<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BEE7E9">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_audition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#81DDCC"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/toolbar_back">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="试听"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="13dp" />

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/audition_play_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_audition">

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#00000000"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/play_music" />

        <SeekBar
            android:id="@+id/sb_convert_audition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"

            android:progressDrawable="@drawable/seekbar_blue"
            android:thumb="@drawable/seekbar_thumb_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_current_time"
            app:layout_constraintStart_toEndOf="@+id/btn_pause"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_time"
            android:textColor="#5F6162"
            app:layout_constraintBottom_toBottomOf="@+id/sb_convert_audition"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_time"
            app:layout_constraintTop_toTopOf="@+id/sb_convert_audition" />

        <TextView
            android:id="@+id/tv_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/total_time"
            android:textColor="#5F6162"
            app:layout_constraintBottom_toBottomOf="@+id/tv_current_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_current_time" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/tv_bio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name_resource"
            android:textColor="#5F6162"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_audition_name"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/audition_edit_radius"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="3dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bio_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_bio_name"
            app:layout_constraintTop_toTopOf="@+id/tv_bio_name" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bio_resource"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_audition_bio"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/melody_edit_radius"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout7"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout9"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_to_repository"
            android:textColor="#5F6162"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/sp_select_repository"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/sp_select_repository"
            android:entries="@array/spinner_save_repository"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/audition_save_radius"
        android:onClick="onClick"
        android:text="@string/save"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

</android.support.constraint.ConstraintLayout>